--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <html>
 <head>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.min.js"></script>
-    <script type="text/javascript" src="network.js" charset="UTF-8"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.min.css" rel="stylesheet" type="text/css" />
 
-    <style type="text/css">
-        #network {
-            width: auto;
-            height: 80%;
-            border: 1px solid lightgray;
-        }
-    </style>
+    <script type="text/javascript" src="network.js" charset="UTF-8"></script>
+    <link href="style/style.css" rel="stylesheet" type="text/css" />
+
     <title>BeerCorpGraph</title>
 </head>
 <body>
@@ -134,7 +129,7 @@
                 y:false
             },
             font: {
-                color: '#343434',
+                color: '#dddddd',
                 size: 14, // px
                 face: 'arial',
                 background: 'none',
