Added a footer with link to github repo

--- a/index.html
+++ b/index.html
@@ -331,5 +331,7 @@
     redrawAll();
 
 </script>
+
+<div id="footer"><a href="https://github.com/PlusMinus0/BeerCorpGraph">Source @ Github</a></div>
 </body>
 </html>
